Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeDrawingArea.mm
@@ -116,6 +116,15 @@ void RemoteLayerTreeDrawingArea::willDestroyDisplayRefreshMonitor(DisplayRefresh
         m_displayRefreshMonitorsToNotify->remove(remoteMonitor);
 }
 
+void RemoteLayerTreeDrawingArea::adoptDisplayRefreshMonitorsFromDrawingArea(DrawingArea& drawingArea)
+{
+    if (is<RemoteLayerTreeDrawingArea>(drawingArea)) {
+        auto& otherDrawingArea = downcast<RemoteLayerTreeDrawingArea>(drawingArea);
+        m_displayRefreshMonitors = WTFMove(otherDrawingArea.m_displayRefreshMonitors);
+        otherDrawingArea.m_displayRefreshMonitorsToNotify = nullptr;
+    }
+}
+
 void RemoteLayerTreeDrawingArea::updateRootLayers()
 {
     Vector<Ref<GraphicsLayer>> children;
